# DoutoradoCefet

TeoriaGrafos/: .gitignore  PROJETO_COMPLETO.md  README.md  pratica01_experimentos2.ipynb  pyproject.toml  representacoes_grafos.ipynb  terminologia.ipynb
TeoriaGrafos/arvore_geradora/: 01_arvore_geradora_spanning_tree.ipynb  02_agm_mst.ipynb  03_agm_algoritmos_teoria.ipynb  README.md
TeoriaGrafos/arvores/: 01_introducao_arvores.ipynb  02_propriedades_arvores.ipynb  03_arvores_enraizadas_binarias.ipynb  04_centro_grafo.ipynb  README.md
TeoriaGrafos/buscas/: 01_busca_em_largura_bfs.ipynb  README.md
TeoriaGrafos/buscas em largura/: 01_busca_em_largura_bfs.ipynb  02_exercicios_bfs.ipynb  README.md
TeoriaGrafos/buscas em profundidade/: 03_busca_em_profundidade_dfs.ipynb  README.md
TeoriaGrafos/caminhos_minimos/: 01_bellman_ford.ipynb  02_exercicios_bellman_ford.ipynb  03_dijkstra.ipynb  04_exercicios_dijkstra.ipynb  README.md
TeoriaGrafos/praticas/pratica01/: INSTRUCOES.md  README.md  pratica01_experimentos.ipynb
TeoriaGrafos/praticas/pratica02/: .gitignore  gr15.tsp  gr17.tsp  gr21.tsp  gr24.tsp
TeoriaGrafos/praticas/pratica03/: .gitignore  ANALISE_REDUNDANCIA.md  ATUALIZACOES_RELATORIO_01.md  CHECKLIST_REQUISITOS.md  CORRECAO_CELL_59.md  (+29 more)
TeoriaGrafos/representacoes/: 01_introducao_representacoes.ipynb  02_lista_adjacencia.ipynb  03_matriz_adjacencia.ipynb  README.md
TeoriaGrafos/terminologia/: 01_introducao_motivacao.ipynb  02_terminologia.ipynb  03_tipos_grafos.ipynb  04_grafos_especiais.ipynb  05_grau_teoremas.ipynb  06_konigsberg.ipynb  README.md
(+970 files in other folders)
