[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teoriagrafos"
version = "0.1.0"
description = "Exemplos didáticos de representações de grafos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Autor", email = "" }
]
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.5",
    "jupyter>=1.0",
    "numpy>=1.21",
]

[project.scripts]
teoriagrafos = "teoriagrafos.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teoriagrafos"]
